# objection_engine

./: .gitignore  Dockerfile  README.md  __init__.py  anim.py  constants.py  example.py  faq.md  fix-gifs.md  manual_character_example.py  polarity_analysis.py  pyproject.toml  renderer.py  requirements.txt  test.py  test_assets.py  test_bad_tags.py  test_single_assets.py  utils.py
beans/: comment.py  comment_bridge.py  img.py  scene.py  text.py  video.py
docs/: CreatingAScene.md  CreatingCustomCharacter.md  CreatingCustomMusicPack.md  DialogueActionCommands.md  StructureOfAScene.md  UsingGavelSlamEffect.md  UsingJudgeVerdictEffect.md  UsingTestimonyIndicatorEffect.md  WritingASceneWithXML.md
docs/v4/: CreatingAScene.md  CreatingCustomCharacter.md  CreatingCustomMusicPack.md  DialogueActionCommands.md  StructureOfAScene.md
examples/: example.py  example_athena.py  example_compare_v3_and_v4_mult.py  example_dmv_verdict.py  example_dmv_verdict_2.py  example_dmv_verdict_words.py  example_easy.py  example_emoji.py  example_forceemotion.py  example_gavel.py  example_gavel_simple.py  example_hard.py  example_instantobjection.py  example_longline.py  example_music.py  example_old.py  example_parse_tags.py  example_scene.py  example_scene_old.py  example_spoiler.py  example_testimony_indicator.py  example_verdict_simple.py  example_xml.py  payne_api.py  profile_test.py  test_bad_tags.py  test_compare_new_engine_wrap.py  test_line_breaks.py  test_music_switch.py  test_rtl.py  test_script.xml
examples/v4/: example_athena.py  example_compare_v3_and_v4.py  example_easy.py  example_emoji.py  example_hard.py  example_longline.py  example_music.py  example_old.py  example_scene.py  example_scene_api.py  example_scene_old.py  example_spoiler.py  payne_api.py
objection_engine/: MovieKit.py  __init__.py  ace_attorney_scene.py  anim.py  constants.py  font_constants.py  font_tools.py  gavel_slam.py  judge_verdict.py  loading.py  make_movie.py  math_helpers.py  parse_tags.py  parse_tags_v2.py  polarity_analysis.py  renderer.py  tag_macros.py  testimony_indicator.py  utils.py  xml_parser.py
objection_engine/beans/: comment.py  comment_bridge.py  font_constants.py  font_tools.py  img.py  scene.py  text.py  video.py
objection_engine/composers/: compose_gavel_slam.py  compose_verdict.py
objection_engine/v4/: MovieKit.py  ace_attorney_scene.py  judge_verdict.py  loading.py  make_movie.py  math_helpers.py  parse_tags.py  tag_macros.py
