[tool.poetry]
name = "objection_engine"
version = "4.0.0"
description = "Library that turns comment chains into Ace Attorney scenes, used in several bots"
authors = ["Luis Mayo Valbuena <luismayovalbuena@outlook.es>", "Malcolm Anderson <malcolminyo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
spaw = "^0.2"
Pillow = "^9.1.0"
matplotlib = "^3.5.1"
pydub = "^0.25.1"
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
spacy = "^3.1.4"
textblob = "^0.17.1"
praw = "^7.5.0"
tinydb = "^4.7.0"
google-cloud-translate = "^2.0.1"
opencv-python = "^4.5.5"
fonttools = "^4.33.3"
numpy = "^1.19.3"
rich = "^12.6.0"
requests = "^2.28.1"
toml = "^0.10.2"
polyglot = "^16.7.4"
pyicu = "^2.10.2"
pycld2 = "^0.41"
morfessor = "^2.0.6"
transformers = "^4.25.1"
torch = "^1.13.1"
sentencepiece = "^0.1.97"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0", "cython>=0.29.28"]
build-backend = "poetry.core.masonry.api"
