[tool.poetry]
name = "objection_engine"
version = "3.2.1"
description = "Library that turns comment chains into ace attorney scenes, used in several bots"
authors = ["Luis Mayo Valbuena <luismayovalbuena@outlook.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
spaw = "^0.2"
Pillow = "^9.1.0"
matplotlib = "^3.5.1"
pydub = "^0.25.1"
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
spacy = "^3.1.4"
textblob = "^0.17.1"
praw = "^7.5.0"
tinydb = "^4.7.0"
google-cloud-translate = "^2.0.1"
opencv-python = "^4.5.5"
fonttools = "^4.33.3"
numpy = "^1.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "cython>=0.29.28"]
build-backend = "poetry.core.masonry.api"
